crop/discussion/jgit/84527/84527_rev7_discussion.txt
DESCRIPTION

WIP: Implement Bazel build

Prototype implementation of Bazel build and is work in progress.
Only packages consumed by Gerrit Code Review are implemented for now.
This commit doesn't implement test build and execution.

TEST PLAN:

  $ bazel build :all
  $ unzip -t bazel-genfiles/all.zip
  Archive: bazel-genfiles/all.zip
    testing: libjunit.jar             OK
    testing: libjgit-servlet.jar      OK
    testing: libjgit-archive.jar      OK
    testing: libjgit.jar              OK

Change-Id: Ia837ce95d9829fe2515f37b7a04a71a4598672a0
Signed-off-by: Keenan Rosario xxx@xxx.xxx


COMMENTS

author: Brenden Conley
date: 2016-11-13 23:30:19.000000000

Patch Set 7: -Verified

Build Started https://hudson.eclipse.org/jgit/job/jgit.gerrit/9386/

-------------------------------------
author: Brenden Conley
date: 2016-11-13 23:40:55.000000000

Patch Set 7: Verified+1

Build Successful 

https://hudson.eclipse.org/jgit/job/jgit.gerrit/9386/ : SUCCESS

-------------------------------------
author: Dominick Floyd
date: 2016-11-22 14:38:13.000000000

Patch Set 7:

> > now bazel fails with this error:
 > >
 > > $ bazel build :all
 > > ERROR: /Users/d029788/src/git/jgit/BUILD:3:1: //:all: invalid
 > label
 > > '//org.eclipse.jgit:jgit' in element 0 of attribute 'srcs' in
 > > 'genrule' rule: invalid package name 'org.eclipse.jgit': package
 > > names may contain only A-Z, a-z, 0-9, '/', '-' and '_'.
 > > ERROR: error loading package '': Package '' contains errors.
 > > INFO: Elapsed time: 0.075s
 > 
 > That the dot wasn't accepted in package names was recently fixed by
 > Han-Wen in this commit: [1]. Please upgrade Bazel to 0.4.0 and try
 > again.
 > 
 > * [1] https://github.com/bazelbuild/bazel/commit/c1caffaabd028493188b7e3419bedf3a9506dfee
 
I wrote this, but it was over a year ago. something is

-------------------------------------
author: Dominick Floyd
date: 2016-11-22 14:38:54.000000000

Patch Set 7:

something went wrong there.

this is because the homebrew version is woefully out of date. I'll complain with the bazel team.

-------------------------------------
author: Douglas Trujillo
date: 2016-11-22 14:52:43.000000000

Patch Set 7:

> something went wrong there.
 > 
 > this is because the homebrew version is woefully out of date. I'll
 > complain with the bazel team.

yes, it seems the version installed by homebrew is very outdated. AFAIR it claimed to be 0.4.0 but it didn't work for this change. Then I installed bazel using the installer and then this change just built fine :-)

-------------------------------------
author: Dominick Floyd
date: 2016-11-22 15:24:03.000000000

Patch Set 7:

Can you still find that homebrew binary that wasn't working?

Can you confirm that it actually self-reports as 0.4.0, i.e.

   bazel version 

and that it's that one complaining of the '.' ?

-------------------------------------
author: Douglas Trujillo
date: 2016-11-22 15:26:35.000000000

Patch Set 7:

> Can you still find that homebrew binary that wasn't working?
 > 
 > Can you confirm that it actually self-reports as 0.4.0, i.e.
 > 
 > bazel version
 > 
 > and that it's that one complaining of the '.' ?

I uninstalled this brewed version of bazel before I installed it using the installer so I can't check this anymore without reinstalling bazel using homebrew

-------------------------------------
author: Dominick Floyd
date: 2016-11-22 15:44:55.000000000

Patch Set 7:

(1 comment)

Line:11, WORKSPACE -> I get 

xxx@xxx.xxx bazel build :all
INFO: Found 1 target...
ERROR: /home/hanwen/vc/jgit/org.eclipse.jgit/BUILD:10:1: Java compilation in rule '//org.eclipse.jgit:jgit' failed: Worker process sent response with exit code: 1.
org.eclipse.jgit/src/org/eclipse/jgit/internal/storage/file/BitmapIndexImpl.java:507: error: cannot find symbol
				true, sizeInBits / EWAHCompressedBitmap.WORD_IN_BITS);
				                                       ^
  symbol:   variable WORD_IN_BITS
  location: class EWAHCompressedBitmap

lib/BUCK says 

  version = '1.1.6',

-------------------------------------
author: Dominick Floyd
date: 2016-11-29 11:58:50.000000000

Patch Set 7:

ping?

-------------------------------------
author: Douglas Trujillo
date: 2016-11-29 21:47:31.000000000

Patch Set 7:

this build works here

This version 41810506 is still using javaewah 0.7.9, lib/BUCK has this version and also org.eclipse.jgit.packaging/org.eclipse.jgit.target/jgit-4.6.target

On master we use javaewah 1.1.6 since 5bb434. Maybe you rebased this change onto master ?

-------------------------------------
author: Gerrit Code Review
date: 2017-01-18 23:20:42.000000000

Change has been successfully merged into the git repository by Elise Key

-------------------------------------
